[tool.poetry]
name = "yaptide-converter"
version = "1.0.0"
description = "Yet Another Particle Transport IDE - converter"
authors = ["yaptide team"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
repository = "https://github.com/yaptide/converter"
homepage = "https://github.com/yaptide/converter"
packages = [{include = "converter"}]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/yaptide/converter/issues"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

[tool.poetry.scripts]
yaptide-converter = "converter.main:main"

[tool.poetry.group.test.dependencies]
pytest = "8.1.1"
pre-commit = "3.7.0"
# scipy is needed in unit tests to cross check if rotation method works properly
scipy = "1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pycodestyle]
max-line-length = "120"

[tool.yapf]
based_on_style = "pep8"
column_limit = "120"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

testpaths = ["tests"]
