[project]
name = "yaptide-converter"
version = "1.0.0"
description = "Yet Another Particle Transport IDE - converter"
authors = [{name = "yaptide team"}] # PEP 621 author format
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.9,<3.14"

[project.urls]
"Homepage" = "https://github.com/yaptide/converter" # Renamed from repository
"Bug Tracker" = "https://github.com/yaptide/converter/issues"

[project.scripts]
yaptide-converter = "converter.main:main"

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "pre-commit==4.2.0",
    "scipy==1.13.1",
]

[tool.poetry]
# Keep this section for Poetry-specific configurations not covered by PEP 621
packages = [{include = "converter"}] # Keep if you explicitly include/exclude packages

[build-system]
requires = ["poetry-core>=1.0.0"] # Ensure poetry-core is at least 1.0 for PEP 517 compliance
build-backend = "poetry.core.masonry.api"

[tool.pycodestyle]
max-line-length = "120"

[tool.yapf]
based_on_style = "pep8"
column_limit = "120"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]