[project]
name = "yaptide-converter"
version = "1.0.0"
description = "Yet Another Particle Transport IDE - converter"
authors = [{name = "yaptide team"}] # PEP 621 author format
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.9,<3.14"

[project.urls]
"Homepage" = "https://github.com/yaptide/converter" # Renamed from repository
"Bug Tracker" = "https://github.com/yaptide/converter/issues"

[project.scripts]
yaptide-converter = "converter.main:main"


[tool.poetry]
# Keep this section for Poetry-specific configurations not covered by PEP 621
packages = [{include = "converter"}]

[tool.poetry.group.test]
optional = true # Mark as optional so it's not installed by default

[tool.poetry.group.test.dependencies]
pytest = "8.3.5"
pre-commit = "4.2.0"
# scipy is needed in unit tests to cross check if rotation method works properly
# Use conditional dependencies based on Python version
scipy = [
    { version = "1.13.1", python = "3.9" },
    { version = "1.15.1", python = ">=3.10,<3.14" } # For Python 3.10 and up, within project's range
]
[build-system]
requires = ["poetry-core>=1.0.0"] # Ensure poetry-core is at least 1.0 for PEP 517 compliance
build-backend = "poetry.core.masonry.api"

[tool.pycodestyle]
max-line-length = "120"

[tool.yapf]
based_on_style = "pep8"
column_limit = "120"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
testpaths = ["tests"]