[metadata]
name = yaptide-converter
version = 1.0.0
author = yaptide team
description = yaptide converter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yaptide/converter
project_urls =
    Bug Tracker = https://github.com/yaptide/converter/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    scipy 

[options.entry_points]
console_scripts =
        yaptide-converter = converter.main:main

[pycodestyle]
max-line-length=120

[flake8]
max-line-length=120

[yapf]
based_on_style = pep8
column_limit = 120

[tool:pytest]
testpaths = tests